Fix tooltip clipped by viewport when toolbar is near page bottom
Fixes https://github.com/xdan/jodit/issues/1150

--- a/src/core/ui/button/tooltip/tooltip.less
+++ b/src/core/ui/button/tooltip/tooltip.less
@@ -53,3 +53,7 @@
 .jodit-ui-tooltip.jodit-ui-tooltip_visible_true {
 	opacity: 1;
 }
+
+.jodit-ui-tooltip.jodit-ui-tooltip_above_true {
+	transform: translate(-50%, calc(var(--padding-default) / -2));
+}
